--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <aside>
+    <ul>
+      <li>
+        <i class="fa-solid fa-phone-flip"></i>
+        <a href="tel:+0123456789">+012 345 6789</a>
+      </li>
+    </ul>
+    <ul>
+      <li><a href="#" class="fa-brands fa-facebook"></a></li>
+      <li><a href="#" class="fa-brands fa-linkedin"></a></li>
+      <li><a href="#" class="fa-brands fa-github"></a></li>
+    </ul>
+  </aside>
+  <!-- NAV  -->
+  <nav>
+    <aside>
+      <i class="fa-solid fa-chalkboard-user"></i>
+      <h2>Tutor</h2>
+    </aside>
+    <ul>
+      <li><a href="./index.html" target="_blank">Home</a></li>
+      <li><a href="#about.html">About</a></li>
+      <li><a href="#contact.html">Contact</a></li>
+      <li><a href="./korea.html">Korea</a></li>
+      <li><a href="./thailand.html">Thailand</a></li>
+      <li><a href="./brazil.html">Brazil</a></li>
+    </ul>
+    <details>
+      <summary class="fa-solid fa-bars"></summary>
+      <ul>
+        <li><a href="./index.html" target="_blank">Home</a></li>
+      <li><a href="#about.html">About</a></li>
+      <li><a href="#contact.html">Contact</a></li>
+      <li><a href="./korea.html" target="_blank">Korea</a></li>
+      <li><a href="./thailand.html" target="_blank">Thailand</a></li>
+      <li><a href="./brazil.html" target="_blank">Brazil</a></li>
+      </ul>
+    </details>
+  </nav>  
+  <!-- NAV END  -->
+  <!-- HEADER  -->
+  <header>
+    <section>
+      <aside>
+        <h1>Teaching for Diersity</h1>
+        <h3>Improve your skills with our team</h3>
+        <a href="#about">Our story</a>
+      </aside>
+    </section>
+  </header>
+  <!-- HEADER END  -->
 </body>
 </html>
