Home:Header is done

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <aside>
         <h1>Teaching for Diersity</h1>
         <h3>Improve your skills with our team</h3>
-        <a href="#about">Our story</a>
+        <a href="#about">OUR STORY</a>
       </aside>
     </section>
   </header>
