Home: change the name of title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav>
     <aside>
       <i class="fa-solid fa-chalkboard-user"></i>
-      <h2>Tutor</h2>
+      <h2>DPN</h2>
     </aside>
     <ul>
       <li><a href="./index.html" target="_blank">Home</a></li>
