Korea-mobile:Assignment section is done

--- a/korea.html
+++ b/korea.html
@@ -60,5 +60,126 @@
     </section>
   </header>
   <!-- HEADER END  -->
-</body>
+  <!-- MAIN  -->
+  <main class="korea">
+    <!-- INTRO  -->
+    <section class="intro">
+      <figure>
+        <img src="./korea_img/Korean.jpg" alt="Korean">
+        <figcaption>
+          <h4>I'm James Jun</h4>
+          <p>
+            5 Years of Teaching Experience
+            <span>Korean</span>
+          </p>
+          <p>
+            <span>소개: </span> 저는 항상 열정을 가지고 가르칩니다. 한국어로 영어, 역사, 과학, 수학을 가르치며
+            다양한 튜터링 경험이 있습니다.
+          </p>
+          <a href="#">Talk to Me</a>
+        </figcaption>
+      </figure>
+    </section>
+    <!-- INTOR END  -->
+    <!-- ASSIGNMENT  -->
+    <section class="assignment">
+      <section>
+        <h2>Weekly Assignment</h2>
+        <p>
+          If you join the assigment section, we are going to give some assignment related to your course and teach how to solve the problem in Korean.
+        </p>
+      </section>
+      <figure>
+        <i class="fa-solid fa-language"></i>
+        <figcaption>
+          <h4>Korean for Begginer</h4>
+          <article>
+            <h6>30Weeks</h6>
+            <h6>$200.00</h6>
+          </article>
+          <a href="#">Join</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <i class="fa-solid fa-flask"></i>
+        <figcaption>
+          <h4>Science for Begginer</h4>
+          <article>
+            <h6>30Weeks</h6>
+            <h6>$200.00</h6>
+          </article>
+          <a href="#">Join</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <i class="fa-solid fa-landmark"></i>
+        <figcaption>
+          <h4>History for Begginer</h4>
+          <article>
+            <h6>30Weeks</h6>
+            <h6>$200.00</h6>
+          </article>
+          <a href="#">Join</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <i class="fa-solid fa-calculator"></i>
+        <figcaption>
+          <h4>Math for Begginer</h4>
+          <article>
+            <h6>30Weeks</h6>
+            <h6>$200.00</h6>
+          </article>
+          <a href="#">Join</a>
+        </figcaption>
+      </figure>
+    </section>
+    <!-- ASSIGNMENT END  -->
+    <!-- PACKAGE  -->
+    <section class="package">
+      <section>
+        <h2>Package</h2>
+        <p>
+          If you join the assigment Package, it can be benefit to who want to take more lessons and keep saving money.
+        </p>
+      </section>
+      <aside>
+        <h3>4 Lessons</h3>
+        <h4>$140</h4>
+        <article>
+          <h5>1 Month, 1 Lesson per week</h5>
+          <h6>Valid for one month</h6>
+        </article>
+        <section>
+          <a href="#">Select</a>
+        </section>
+      </aside>
+      <aside>
+        <h3>8 Lessons</h3>
+        <h4>$240</h4>
+        <article>
+          <h5>1 Month, 2 Lesson per week</h5>
+          <h6>Valid for one month</h6>
+        </article>
+        <section>
+          <a href="#">Select</a>
+        </section>
+      </aside>
+      <aside>
+        <h3>16 Lessons</h3>
+        <h4>$480</h4>
+        <article>
+          <h5>1 Month, 1 Lesson per week</h5>
+          <h6>Valid for one month</h6>
+        </article>
+        <section>
+          <a href="#">Select</a>
+        </section>
+      </aside>
+    </section>
+    <!-- PACKAGE END  -->
+  </main>
+  <!-- MAIN END  -->
+    
+  </body>
 </html>
