HTML : Contact section done

--- a/index.html
+++ b/index.html
@@ -60,5 +60,76 @@
     </section>
   </header>
   <!-- HEADER END  -->
+  <!-- MAIN CONTENT -->
+  <main>
+    <!-- CONTACT SECTION -->
+    <section class="contact" id="contact">
+        <!-- CONTACT INFO -->
+        <article>
+            <h2>
+                Contact Info
+            </h2>
+            <small>
+                Get in touch with us
+            </small>
+        </article>
+        <section>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-phone"></i>
+                    <aside>
+                        <h4>Talk to us:</h4>
+                        <a href="tel:+123456789">+12-345-6789</a>
+                    </aside>
+                </li>
+                <li>
+                    <i class="fa-solid fa-inbox"></i>
+                    <aside>
+                        <h4>Mail us:</h4>
+                        <a href="mailto:admin@dpntutoring.com">admin@dpntutoring.com</a>
+                    </aside>
+                </li>
+                <li>
+                    <i class="fa-solid fa-map-location-dot"></i>
+                    <aside>
+                        <h4>Our Location:</h4>
+                        <address>
+                            <a href="https://goo.gl/maps/xFuGLEh3G3YuK4Dk6">889 W Pender St, Vancouver, BC V6C 3B2</a> 
+                        </address>
+                    </aside>
+                </li>
+                <li>
+                    <i class="fa-solid fa-business-time"></i>
+                    <aside>
+                        <h4>Open Everyday:</h4>
+                        <time>
+                            10AM - 8PM 
+                        </time>
+                    </aside>
+                </li>
+            </ul>
+            <!-- CONTACT FORM -->
+            <form action="#">
+                    <article>
+                        <h3>
+                            Message Us
+                        </h3>
+                        <small>
+                            Feel free to contact us
+                        </small>
+                    </article>
+                    <aside>
+                        <input type="text" name="name" id="name" placeholder="Your Name*">
+                        <input type="number" name="phone" id="phone" placeholder="Your Phone*">
+                    </aside>
+                    <input type="email" name="email" id="email" placeholder="Your Email*">
+                    <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                    <input type="submit" value="Send Message">
+            </form>
+        </section>
+    </section>
+    <!-- CONTACT SECTION END-->
+</main>
+<!-- MAIN CONTENT END-->
 </body>
 </html>
