HTML : Footer section done + add footer img

--- a/index.html
+++ b/index.html
@@ -131,5 +131,90 @@
     <!-- CONTACT SECTION END-->
 </main>
 <!-- MAIN CONTENT END-->
+<!-- FOOTER -->
+<footer>
+  <article>
+      <figure>
+          <img src="mentor.png" alt="logo">
+          <figcaption>
+              <h2>
+                  DPN
+              </h2>
+              <p>
+                  The Best Tutoring Service
+              </p>
+          </figcaption>
+      </figure>
+      <aside>
+          <h3>
+              Links
+          </h3>
+          <ul>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="./index.html"> 
+                      Home
+                  </a>
+              </li>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="#about"> 
+                      About
+                  </a> 
+              </li>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="./korea.html" target="_blank" >
+                      Korean
+                  </a>
+              </li>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="./brazil.html " target="_blank" >
+                      Brazilian
+                  </a>
+              </li>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="./thailand.html" target="_blank" >
+                      Thai
+                  </a>
+              </li>
+              <li>
+                  <i class="fa-brands fa-rocketchat"></i>
+                  <a href="#contact"> 
+                      Contact Us
+                  </a>
+              </li>
+          </ul>
+      </aside>
+      <!-- SOCIAL -->
+      <section>
+          <h3>
+              Follow Us
+          </h3>
+          <section class="icons">
+              <ul>
+                  <li><a href="#" class="fa-brands fa-facebook"></a></li>
+                  <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                  <li><a href="#" class="fa-brands fa-linkedin"></a></li>
+                  <li><a href="#" class="fa-brands fa-youtube"></a></li>
+              </ul>
+          </section>
+      </section>
+  </article>
+  <!-- BOTTOMBAR -->
+  <section class="bottombar">
+      <article>
+          <p>
+              Copyright &copy; 2024 <a href="./index.html">DPN Tutoring Service</a>
+          </p>
+          <p>
+              Created by <a href="./index.html">Dylan&Pedro&Natt</a>
+          </p> 
+      </article>
+      <a href="./index.html" class="fa-solid fa-robot"></a>
+  </section>
+</footer>    
 </body>
 </html>
