contact html: Fixed img

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <footer>
   <article>
       <figure>
-          <img src="mentor.png" alt="logo">
+          <img src="./home_img/mentor.png" alt="logo">
           <figcaption>
               <h2>
                   DPN
