--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <header>
     <section>
       <aside>
-        <h1>Teaching for Diersity</h1>
+        <h1>Teaching for Diversity</h1>
         <h3>Improve your skills with our team</h3>
         <a href="#about">OUR STORY</a>
       </aside>
@@ -62,6 +62,174 @@
   <!-- HEADER END  -->
   <!-- MAIN CONTENT -->
   <main>
+    <!-- ABOUT SECTION -->
+    <section class="about" id="about">
+        <article>
+            <h2>
+                Welcome to DPN Tutoring
+            </h2>
+            <p>
+                DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence and increase their self-esteem. In order to get the best out of the learning, the students get access to private and personalized classes based on their personal difficulties, so that they can improve along with similar skills classmates. 
+            </p>
+            <strong>Learning has never been so simple!</strong>
+        </article>
+        <section class="about team">
+            <h2>
+                In DPN, we have <span>Diversity!</span>
+            </h2>
+            <article>
+                <h3>
+                    Our Tutors
+                </h3>
+                <figure>
+                    <img src="/home_img/korean-tutor.png" alt="Korean">
+                    <figcaption>
+                        <h4>Mia</h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/home_img/brazilian-tutor.jpg" alt="Brazilian">
+                    <figcaption>
+                        <h4>Thomaz</h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/home_img/thai-tutor.jpg" alt="Thai">
+                    <figcaption>
+                        <h4>Dara</h4>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </figcaption>
+                </figure>
+            </article>
+        </section>
+        <section class="about languages">
+            <h2>
+                We teach languages!
+            </h2>
+            <h4>
+                What do you want to <span>learn</span>?
+            </h4>
+            <figure>
+                <img src="/home_img/korea-flag.png" alt="Flag-1">
+                <figcaption>
+                    <h4>Korean</h4>
+                    <p>Mia</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="/home_img/brazil-flag.png" alt="Flag-2">
+                <figcaption>
+                    <h4>Portuguese</h4>
+                    <p>Thomaz</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="/home_img/thailand-flag.png" alt="Flag-3">
+                <figcaption>
+                    <h4>Thai</h4>
+                    <p>Dara</p>
+                </figcaption>
+            </figure>   
+        </section>
+        <section class="about method">  
+            <h2>We make it simple!</h2>
+            <h4>Everyone can <span>learn</span>!</h4>
+            <aside>
+                <i class="fa-solid fa-book"></i>
+                <h3>Personalized Lessons</h3>
+                <p>
+                    We respect each other differences. Students never feel behind with our customized classes!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-chalkboard-user"></i>
+                <h3>Hybrid Classes</h3>
+                <p>
+                    Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-person-chalkboard"></i>
+                <h3>Certified Tutors</h3>
+                <p>
+                    Our tutors have high ratings and are willing to support you as much as possible. In addition, they have a great sense of humor. Have fun in your studies!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-arrow-trend-up"></i>
+                <h3>General Skills & Knowledge</h3>
+                <p>
+                    In DPN, we value diversity, and to have a diverse knowledge, we manage to help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
+                </p>
+            </aside>
+        </section>
+    </section>
+    <!-- ABOUT SECTION ENDS -->
     <!-- CONTACT SECTION -->
     <section class="contact" id="contact">
         <!-- CONTACT INFO -->
