--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             <h2>
                 Welcome to DPN Tutoring
             </h2>
+            <h6></h6>
             <p>
-                DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence and increase their self-esteem. In order to get the best out of the learning, the students get access to private and personalized classes based on their personal difficulties, so that they can improve along with similar skills classmates. 
+                DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence and increase their self-esteem. In order to get the best out of it, the students get access to private and personalized classes based on their personal difficulties, so that they can improve along with similar skills classmates. 
             </p>
             <strong>Learning has never been so simple!</strong>
         </article>
