--- a/korea.html
+++ b/korea.html
@@ -30,7 +30,7 @@
     </aside>
     <ul>
       <li><a href="./index.html" target="_blank">Home</a></li>
-      <li><a href="#about.html">About</a></li>
+      <li><a href="./index.html/#about">About</a></li>
       <li><a href="#contact.html">Contact</a></li>
       <li><a href="./korea.html">Korea</a></li>
       <li><a href="./thailand.html">Thailand</a></li>
@@ -180,6 +180,90 @@
     <!-- PACKAGE END  -->
   </main>
   <!-- MAIN END  -->
-    
+    <!-- FOOTER -->
+  <footer>
+    <article>
+        <figure>
+            <img src="./home_img/mentor.png" alt="logo">
+            <figcaption>
+                <h2>
+                    DPN
+                </h2>
+                <p>
+                    The Best Tutoring Service
+                </p>
+            </figcaption>
+        </figure>
+        <aside>
+            <h3>
+                Links
+            </h3>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="./index.html"> 
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="#about"> 
+                        About
+                    </a> 
+                </li>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="./korea.html" target="_blank" >
+                        Korean
+                    </a>
+                </li>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="./brazil.html " target="_blank" >
+                        Brazilian
+                    </a>
+                </li>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="./thailand.html" target="_blank" >
+                        Thai
+                    </a>
+                </li>
+                <li>
+                    <i class="fa-brands fa-rocketchat"></i>
+                    <a href="#contact"> 
+                        Contact Us
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <!-- SOCIAL -->
+        <section>
+            <h3>
+                Follow Us
+            </h3>
+            <section class="icons">
+                <ul>
+                    <li><a href="#" class="fa-brands fa-facebook"></a></li>
+                    <li><a href="#" class="fa-brands fa-twitter"></a></li>
+                    <li><a href="#" class="fa-brands fa-linkedin"></a></li>
+                    <li><a href="#" class="fa-brands fa-youtube"></a></li>
+                </ul>
+            </section>
+        </section>
+    </article>
+    <!-- BOTTOMBAR -->
+    <section class="bottombar">
+        <article>
+            <p>
+                Copyright &copy; 2024 <a href="./index.html">DPN Tutoring Service</a>
+            </p>
+            <p>
+                Created by <a href="./index.html">Dylan&Pedro&Natt</a>
+            </p> 
+        </article>
+        <a href="./index.html" class="fa-solid fa-robot"></a>
+    </section>
+  </footer>  
   </body>
 </html>
