--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
             <h2>
                 In DPN, we have <span>Diversity!</span>
             </h2>
+            <h6></h6>
             <article>
                 <h3>
                     Our Tutors
                 </h3>
                 <figure>
-                    <img src="/home_img/korean-tutor.png" alt="Korean">
+                    <img src="/home_img/Korean.jpg" alt="Korean">
                     <figcaption>
-                        <h4>Mia</h4>
+                        <h4>James Jun</h4>
                         <ul>
                             <li>
                                 <a href="#">
@@ -141,7 +142,7 @@
                 <figure>
                     <img src="/home_img/thai-tutor.jpg" alt="Thai">
                     <figcaption>
-                        <h4>Dara</h4>
+                        <h4>Nattar</h4>
                         <ul>
                             <li>
                                 <a href="#">
