--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a href="#">Know more</a>
                     </figcaption>
                 </figure>
                 <figure>
@@ -137,6 +138,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a href="#">Know more</a>
                     </figcaption>
                 </figure>
                 <figure>
@@ -165,6 +167,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <a href="#">Know more</a>
                     </figcaption>
                 </figure>
             </article>
@@ -179,22 +182,22 @@
             <figure>
                 <img src="/home_img/korea-flag.png" alt="Flag-1">
                 <figcaption>
-                    <h4>Korean</h4>
-                    <p>Mia</p>
+                    <h4>James Jun</h4>
+                    <small>Korean</small>
                 </figcaption>
             </figure>
             <figure>
                 <img src="/home_img/brazil-flag.png" alt="Flag-2">
                 <figcaption>
-                    <h4>Portuguese</h4>
-                    <p>Thomaz</p>
+                    <h4>Thomaz</h4>
+                    <small>Portuguese</small>
                 </figcaption>
             </figure>
             <figure>
                 <img src="/home_img/thailand-flag.png" alt="Flag-3">
                 <figcaption>
-                    <h4>Thai</h4>
-                    <p>Dara</p>
+                    <h4>Nattar</h4>
+                    <small>Thai</small>
                 </figcaption>
             </figure>   
         </section>
