About:Subject SCSS is done

--- a/index.html
+++ b/index.html
@@ -72,17 +72,91 @@
             <p>
                 DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence and increase their self-esteem. In order to get the best out of it, the students get access to private and personalized classes based on their personal difficulties, so that they can improve along with similar skills classmates. 
             </p>
-            <strong>Learning has never been so simple!</strong>
         </article>
+        <section class="about subject">
+            <h2>
+                We teach various subjects in 3 different languages!
+            </h2>
+            <h6></h6>
+            <h4>
+                What do you want to <span>learn</span>?
+            </h4>
+            <article>
+                <figure>
+                    <img src="/home_img/korea-flag.png" alt="Flag-1">
+                    <figcaption>
+                        <p>
+                            You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Korean!</span> 
+                        </p>
+                        <a href="#">Know more</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/home_img/brazil-flag.png" alt="Flag-2">
+                    <figcaption>
+                        <p>
+                            You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Portuguese!</span> 
+                        </p>
+                        <a href="#">Know more</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="/home_img/thailand-flag.png" alt="Flag-3">
+                    <figcaption>
+                        <p>
+                            You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Thai!</span> 
+                        </p>
+                        <a href="#">Know more</a>
+                    </figcaption>
+                </figure>   
+            </article>
+        </section>
+        <section class="about method">  
+            <h2>
+                We make it simple!
+            </h2>
+            <h6></h6>
+            <h4>
+                Everyone can <span>learn</span>!
+            </h4>
+            <aside>
+                <i class="fa-solid fa-book"></i>
+                <h3>Personalized Lessons</h3>
+                <p>
+                    We respect each other differences. Students never feel behind with our customized classes!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-chalkboard-user"></i>
+                <h3>Hybrid Classes</h3>
+                <p>
+                    Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-person-chalkboard"></i>
+                <h3>Certified Tutors</h3>
+                <p>
+                    Our tutors have high ratings and are willing to support you as much as possible. In addition, they have a great sense of humor. Have fun in your studies!
+                </p>
+            </aside>
+            <aside>
+                <i class="fa-solid fa-arrow-trend-up"></i>
+                <h3>General Skills & Knowledge</h3>
+                <p>
+                    In DPN, we value diversity, and to have a diverse knowledge, we manage to help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
+                </p>
+            </aside>
+        </section>
         <section class="about team">
             <h2>
                 In DPN, we have <span>Diversity!</span>
             </h2>
             <h6></h6>
+            <h3>
+                Our Tutors
+            </h3>
             <article>
-                <h3>
-                    Our Tutors
-                </h3>
                 <figure>
                     <img src="/home_img/Korean.jpg" alt="Korean">
                     <figcaption>
@@ -172,67 +246,7 @@
                 </figure>
             </article>
         </section>
-        <section class="about languages">
-            <h2>
-                We teach languages!
-            </h2>
-            <h4>
-                What do you want to <span>learn</span>?
-            </h4>
-            <figure>
-                <img src="/home_img/korea-flag.png" alt="Flag-1">
-                <figcaption>
-                    <h4>James Jun</h4>
-                    <small>Korean</small>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="/home_img/brazil-flag.png" alt="Flag-2">
-                <figcaption>
-                    <h4>Thomaz</h4>
-                    <small>Portuguese</small>
-                </figcaption>
-            </figure>
-            <figure>
-                <img src="/home_img/thailand-flag.png" alt="Flag-3">
-                <figcaption>
-                    <h4>Nattar</h4>
-                    <small>Thai</small>
-                </figcaption>
-            </figure>   
-        </section>
-        <section class="about method">  
-            <h2>We make it simple!</h2>
-            <h4>Everyone can <span>learn</span>!</h4>
-            <aside>
-                <i class="fa-solid fa-book"></i>
-                <h3>Personalized Lessons</h3>
-                <p>
-                    We respect each other differences. Students never feel behind with our customized classes!
-                </p>
-            </aside>
-            <aside>
-                <i class="fa-solid fa-chalkboard-user"></i>
-                <h3>Hybrid Classes</h3>
-                <p>
-                    Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
-                </p>
-            </aside>
-            <aside>
-                <i class="fa-solid fa-person-chalkboard"></i>
-                <h3>Certified Tutors</h3>
-                <p>
-                    Our tutors have high ratings and are willing to support you as much as possible. In addition, they have a great sense of humor. Have fun in your studies!
-                </p>
-            </aside>
-            <aside>
-                <i class="fa-solid fa-arrow-trend-up"></i>
-                <h3>General Skills & Knowledge</h3>
-                <p>
-                    In DPN, we value diversity, and to have a diverse knowledge, we manage to help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
-                </p>
-            </aside>
-        </section>
+        <strong>Learning has never been so simple!</strong>
     </section>
     <!-- ABOUT SECTION ENDS -->
     <!-- CONTACT SECTION -->
