--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </aside>
     <ul>
       <li><a href="./index.html" target="_blank">Home</a></li>
-      <li><a href="#about.html">About</a></li>
-      <li><a href="#contact.html">Contact</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
       <li><a href="./korea.html">Korea</a></li>
       <li><a href="./thailand.html">Thailand</a></li>
       <li><a href="./brazil.html">Brazil</a></li>
@@ -40,8 +40,8 @@
       <summary class="fa-solid fa-bars"></summary>
       <ul>
         <li><a href="./index.html" target="_blank">Home</a></li>
-      <li><a href="#about.html">About</a></li>
-      <li><a href="#contact.html">Contact</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
       <li><a href="./korea.html" target="_blank">Korea</a></li>
       <li><a href="./thailand.html" target="_blank">Thailand</a></li>
       <li><a href="./brazil.html" target="_blank">Brazil</a></li>
@@ -113,8 +113,7 @@
         </section>
         <section class="about method">  
             <h2>
-                We make it simple!
-            </h2>
+                We make it simple!</h2>
             <h6></h6>
             <h4>
                 Everyone can <span>learn</span>!
@@ -123,7 +122,7 @@
                 <i class="fa-solid fa-book"></i>
                 <h3>Personalized Lessons</h3>
                 <p>
-                    We respect each other differences. Students never feel behind with our customized classes!
+                    We respect each other differences. Students will never feel behind with our customized classes!
                 </p>
             </aside>
             <aside>
@@ -161,87 +160,93 @@
                     <img src="/home_img/Korean.jpg" alt="Korean">
                     <figcaption>
                         <h4>James Jun</h4>
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <a href="#">Know more</a>
+                        <aside>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <a href="#">Start studying!</a>
+                        </aside>
                     </figcaption>
                 </figure>
                 <figure>
                     <img src="/home_img/brazilian-tutor.jpg" alt="Brazilian">
                     <figcaption>
                         <h4>Thomaz</h4>
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <a href="#">Know more</a>
+                        <aside>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <a href="#">Start studying!</a>
+                        </aside>
                     </figcaption>
                 </figure>
                 <figure>
                     <img src="/home_img/thai-tutor.jpg" alt="Thai">
                     <figcaption>
                         <h4>Nattar</h4>
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-instagram"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <a href="#">Know more</a>
+                        <aside>
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <a href="#">Start studying</a>
+                        </aside>
                     </figcaption>
                 </figure>
             </article>
