--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         </section>
         <section class="about method">  
             <h2>
-                We make it simple!</h2>
+                We make it simple!
+            </h2>
             <h6></h6>
             <h4>
                 Everyone can <span>learn</span>!
