Tablet: About method is done

--- a/index.html
+++ b/index.html
@@ -118,34 +118,36 @@
                 <h4>
                     Everyone can <span>learn</span>!
                 </h4>
-                <aside>
-                    <i class="fa-solid fa-book"></i>
-                    <h3>Personalized Lessons</h3>
-                    <p>
-                        We respect each other differences. Students will never feel behind with our customized classes!
-                    </p>
-                </aside>
-                <aside>
-                    <i class="fa-solid fa-chalkboard-user"></i>
-                    <h3>Hybrid Classes</h3>
-                    <p>
-                        Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
-                    </p>
-                </aside>
-                <aside>
-                    <i class="fa-solid fa-person-chalkboard"></i>
-                    <h3>Certified Tutors</h3>
-                    <p>
-                        Our tutors have high ratings and are willing to support you as much as possible. In addition, they have a great sense of humor. Have fun in your studies!
-                    </p>
-                </aside>
-                <aside>
-                    <i class="fa-solid fa-arrow-trend-up"></i>
-                    <h3>General Skills & Knowledge</h3>
-                    <p>
-                        In DPN, we value diversity, and to have a diverse knowledge, we manage to help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
-                    </p>
-                </aside>
+                <article>
+                    <aside>
+                        <i class="fa-solid fa-book"></i>
+                        <h3>Personalized Lessons</h3>
+                        <p>
+                            We respect each other differences. Students will never feel behind with our customized classes!
+                        </p>
+                    </aside>
+                    <aside>
+                        <i class="fa-solid fa-chalkboard-user"></i>
+                        <h3>Hybrid Classes</h3>
+                        <p>
+                            Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
+                        </p>
+                    </aside>
+                    <aside>
+                        <i class="fa-solid fa-person-chalkboard"></i>
+                        <h3>Certified Tutors</h3>
+                        <p>
+                            Our tutors have high ratings and are willing to support you as much as possible. In addition, they have a great sense of humor. Have fun in your studies!
+                        </p>
+                    </aside>
+                    <aside>
+                        <i class="fa-solid fa-arrow-trend-up"></i>
+                        <h3>General Skills & Knowledge</h3>
+                        <p>
+                            Here, we value diversity, and to have a diverse knowledge, we help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
+                        </p>
+                    </aside>
+                </article>
             </section>
             <section class="about team">
                 <h2>
