About team done and mobile updated

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                         <img src="/home_img/Korean.jpg" alt="Korean">
                         <figcaption>
                             <h4>James Jun</h4>
+                            <small class="korea">Korea</small>
                             <aside>
                                 <ul>
                                     <li>
@@ -193,6 +194,7 @@
                         <img src="/home_img/brazilian-tutor.jpg" alt="Brazilian">
                         <figcaption>
                             <h4>Thomaz</h4>
+                            <small class="brazil">Brazil</small>
                             <aside>
                                 <ul>
                                     <li>
@@ -224,6 +226,7 @@
                         <img src="/home_img/thai-tutor.jpg" alt="Thai">
                         <figcaption>
                             <h4>Nattar</h4>
+                            <small class="thailand">Thailand</small>
                             <aside>
                                 <ul>
                                     <li>
