About title and subject desktop is done

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <p>
                                 You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Korean!</span> 
                             </p>
-                            <a href="#">Know more</a>
+                            <a href="./korea.html">Know more</a>
                         </figcaption>
                     </figure>
                     <figure>
@@ -97,7 +97,7 @@
                             <p>
                                 You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Portuguese!</span> 
                             </p>
-                            <a href="#">Know more</a>
+                            <a href="./brazil.html">Know more</a>
                         </figcaption>
                     </figure>
                     <figure>
@@ -106,7 +106,7 @@
                             <p>
                                 You will have all the support needed to master the concepts of: Mathematics, Science, History and <span>Thai!</span> 
                             </p>
-                            <a href="#">Know more</a>
+                            <a href="./thai.html">Know more</a>
                         </figcaption>
                     </figure>   
                 </article>
@@ -177,7 +177,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <i class="fa-brands fa-twitter"></i>
+                                            <i class="fa-brands fa-github"></i>
                                         </a>
                                     </li>
                                     <li>
@@ -209,7 +209,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <i class="fa-brands fa-twitter"></i>
+                                            <i class="fa-brands fa-github"></i>
                                         </a>
                                     </li>
                                     <li>
@@ -241,7 +241,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <i class="fa-brands fa-twitter"></i>
+                                            <i class="fa-brands fa-github"></i>
                                         </a>
                                     </li>
                                     <li>
