Thai html : introduce done

--- a/thailand.html
+++ b/thailand.html
@@ -11,15 +11,15 @@
 <body>
     <aside>
         <ul>
-          <li>
-            <i class="fa-solid fa-phone-flip"></i>
-            <a href="tel:+0123456789">+012 345 6789</a>
-          </li>
+            <li>
+                <i class="fa-solid fa-phone-flip"></i>
+                <a href="tel:+0123456789">+012 345 6789</a>
+            </li>
         </ul>
         <ul>
-          <li><a href="#" class="fa-brands fa-facebook"></a></li>
-          <li><a href="#" class="fa-brands fa-linkedin"></a></li>
-          <li><a href="#" class="fa-brands fa-github"></a></li>
+            <li><a href="#" class="fa-brands fa-facebook"></a></li>
+            <li><a href="#" class="fa-brands fa-linkedin"></a></li>
+            <li><a href="#" class="fa-brands fa-github"></a></li>
         </ul>
     </aside>
     <!-- NAV  -->
@@ -29,12 +29,12 @@
             <h2>DPN</h2>
         </aside>
         <ul>
-          <li><a href="./index.html" target="_blank">Home</a></li>
-          <li><a href="./index.html/#about">About</a></li>
-          <li><a href="#contact.html">Contact</a></li>
-          <li><a href="./korea.html">Korea</a></li>
-          <li><a href="./thailand.html">Thailand</a></li>
-          <li><a href="./brazil.html">Brazil</a></li>
+            <li><a href="./index.html" target="_blank">Home</a></li>
+            <li><a href="./index.html/#about">About</a></li>
+            <li><a href="#contact.html">Contact</a></li>
+            <li><a href="./korea.html">Korea</a></li>
+            <li><a href="./thailand.html">Thailand</a></li>
+            <li><a href="./brazil.html">Brazil</a></li>
         </ul>
         <details>
             <summary class="fa-solid fa-bars"></summary>
@@ -64,7 +64,58 @@
     <main>
         <!-- INTRODUCE -->
         <section class="introduce">
-
+            <figure>
+                <img src="./home_img/thai-tutor.jpg" alt="pic">
+                <figcaption>
+                    <h2>
+                        Looking for your Perfect Thai tutor?
+                    </h2>
+                    <a href="#"> Book a class </a>
+                    <h5>
+                        * 1st lesson free
+                    </h5>
+                </figcaption>
+            </figure>
+            <section class="me">
+                <article>
+                    <h2>
+                        About Nattar
+                    </h2>
+                    <p>
+                        สวัสดีค่ะ ณัฐฐา ค่ะ, I'm a high school teacher with over 8 years of experience teaching in the classroom, 3 more year teaching online and over 15 years of tutoring Maths, English, Science and History. แล้วพบกันนะคะ.
+                    </p>
+                </article>
+                <ul>
+                    <li>
+                        <h6>
+                            <small>
+                                Thai 100%
+                            </small>
+                        </h6>
+                    </li>
+                    <li>
+                        <h6>
+                            <small>
+                                English 80%
+                            </small>
+                        </h6>
+                    </li>
+                    <li>
+                        <h6>
+                            <small>
+                                Korean 50%
+                            </small>
+                        </h6>
+                    </li>
+                    <li>
+                        <h6>
+                            <small>
+                                Chinese 30%
+                            </small>
+                        </h6>
+                    </li>
+                </ul>
+            </section>
         </section>
         <!-- ASSIGNMENT -->
         <section class="assignment">
