About team desktop is done. SCSS is done

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </h2>
                 <h6></h6>
                 <p>
-                    DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence and increase their self-esteem. In order to get the best out of it, the students get access to private and personalized classes based on their personal difficulties, so that they can improve along with similar skills classmates. 
+                    DPN Tutoring was founded to unite and include everyone in the best educational methods in the market. In here, we make it simple, with <span>online</span> and <span>in-person</span> classes, our mission is to democratize access to tutoring, as well as helping the students to build confidence, increase their self-esteem and communication skills. In order to get the best out of it, the students get access to private and customized classes based on their personal difficulties and needs, so that they can improve along with similar skills classmates. Join us in our journey and feel your life changing for the better!
                 </p>
             </article>
             <section class="about subject">
@@ -130,7 +130,7 @@
                         <i class="fa-solid fa-chalkboard-user"></i>
                         <h3>Hybrid Classes</h3>
                         <p>
-                            Online and in-person classes, choose what's best for you and <span>learn</span> from wherever you are. Education for everyone!
+                            Don't worry if you live far away, we have online and in-person classes. Choose what's best for you and <span>learn</span> from wherever you are! 
                         </p>
                     </aside>
                     <aside>
@@ -144,7 +144,7 @@
                         <i class="fa-solid fa-arrow-trend-up"></i>
                         <h3>General Skills & Knowledge</h3>
                         <p>
-                            Here, we value diversity, and to have a diverse knowledge, we help students improve their social skills, build up self-confidence, enhance critical-thinking and much more!
+                            Here, we value diversity, and to have a diverse knowledge, we help students improve their social skills, self-confidence, critical-thinking and more!
                         </p>
                     </aside>
                 </article>
