--- a/korea.html
+++ b/korea.html
@@ -40,9 +40,9 @@
       <summary class="fa-solid fa-bars"></summary>
       <ul>
         <li><a href="./index.html" target="_blank">Home</a></li>
-      <li><a href="#about.html">About</a></li>
-      <li><a href="#contact.html">Contact</a></li>
-      <li><a href="./korea.html" target="_blank">Korea</a></li>
+      <li><a href="#intro">Introduction</a></li>
+      <li><a href="#assigment">Assignments</a></li>
+      <li><a href="#package">Packages</a></li>
       <li><a href="./thailand.html" target="_blank">Thailand</a></li>
       <li><a href="./brazil.html" target="_blank">Brazil</a></li>
       </ul>
@@ -63,7 +63,7 @@
   <!-- MAIN  -->
   <main class="korea">
     <!-- INTRO  -->
-    <section class="intro">
+    <section class="intro" id="intro">
       <figure>
         <img src="./korea_img/Korean.jpg" alt="Korean">
         <figcaption>
@@ -82,7 +82,7 @@
     </section>
     <!-- INTOR END  -->
     <!-- ASSIGNMENT  -->
-    <section class="assignment">
+    <section class="assignment" id="assignment">
       <section>
         <h2>Weekly Assignment</h2>
         <p>
@@ -136,7 +136,7 @@
     </section>
     <!-- ASSIGNMENT END  -->
     <!-- PACKAGE  -->
-    <section class="package">
+    <section class="package" id="package">
       <section>
         <h2>Package</h2>
         <p>
