Korea:Tablet is done

--- a/korea.html
+++ b/korea.html
@@ -73,7 +73,7 @@
             <span>Korean</span>
           </p>
           <p>
-            <span>소개: </span> 저는 항상 열정을 가지고 가르칩니다. 한국어로 영어, 역사, 과학, 수학을 가르치며
+            <span>소개: </span> 저는 항상 열정을 가지고 가르칩니다. 한국어로 한국어, 역사, 과학, 수학을 가르치며
             다양한 튜터링 경험이 있습니다.
           </p>
           <a href="#">Talk to Me</a>
@@ -216,19 +216,19 @@
                 <li>
                     <i class="fa-brands fa-rocketchat"></i>
                     <a href="./korea.html" target="_blank" >
-                        Korean
+                        Korea
                     </a>
                 </li>
                 <li>
                     <i class="fa-brands fa-rocketchat"></i>
                     <a href="./brazil.html " target="_blank" >
-                        Brazilian
+                        Brazil
                     </a>
                 </li>
                 <li>
                     <i class="fa-brands fa-rocketchat"></i>
                     <a href="./thailand.html" target="_blank" >
-                        Thai
+                        Thailand
                     </a>
                 </li>
                 <li>
